updated and fixed code

--- a/src/Components/NotFound.css
+++ b/src/Components/NotFound.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
-.container {
+.not-found {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 90vh;
+    height: 40vh;
 }
 
 .h1 {
@@ -15,4 +15,44 @@
 .p {
     font-size: 40px;
     font-family: orbitron;
+}
+
+.not-found-btn {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #000;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 500px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+}
+
+.not-found-btn span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+.not-found-btn span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+}
+
+.not-found-btn:hover span {
+    padding-right: 25px;
+}
+
+.not-found-btn:hover span:after {
+    opacity: 1;
+    right: 0;
 }
