--- a/src/Components/ProuductIndex.css
+++ b/src/Components/ProuductIndex.css
@@ -15,6 +15,7 @@ a {
   color: white;
   font-family: "Roboto Condensed", sans-serif;
   background-color: black;
+  padding-top: 30px;
 }
 
 .container-shoe {
