--- a/src/Components/ProuductIndex.css
+++ b/src/Components/ProuductIndex.css
@@ -28,6 +28,7 @@ a {
   justify-items: center;
   align-items: center;
   filter: drop-shadow(0px 0px 7px rgba(1, 1, 1, .7));
+  color: white;
 }
 
 .productImage {
